[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orizn"
version = "1.0.0"
description = "Official Python SDK for the Orizn Visa API — 39,585 passport-destination pairs in 15 languages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Orizn", email = "api@orizn.app" }]
keywords = ["visa", "travel", "passport", "api", "sdk", "immigration", "orizn"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://visa.orizn.app"
Repository = "https://github.com/MattJeff/orizn-py"
Documentation = "https://visa.orizn.app/visa-api/dashboard/docs"
Issues = "https://github.com/MattJeff/orizn-py/issues"
